feat: add company curd

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,6 @@
 <div class="relative h-[64px] flex w-full justify-between">
   <div class="h-full flex items-center justify-center gap-x-5">
-    <img priority ngSrc="./assets/svg/logo.svg" alt="logo" width="140.35" height="30">
-    <div class="text-white text-xl font-semibold">ADMIN</div>
+    <div class="text-white text-xl font-semibold">Pinocchio</div>
   </div>
 
   <app-header-nav></app-header-nav>
