--- a/src/app/views/auth/auth.component.html
+++ b/src/app/views/auth/auth.component.html
@@ -1,11 +1,11 @@
-<div class="h-full w-full px-[150px] py-[100px] flex justify-between">
+<div class="h-full w-full px-[150px] py-[100px] flex justify-center">
   <form
-    class="max-w-[343px] h-full flex flex-col items-center justify-between gap-4"
+    class="max-w-[343px] h-full flex flex-col items-center justify-center gap-4"
     (ngSubmit)="onSubmit()"
     [formGroup]="form"
   >
     <div class="flex flex-col gap-y-[27px] text-[#D4E0FA] tracking-[0.38px]">
-      <div class="h-[193px] flex flex-col-reverse gap-y-2 text-center">
+      <div class="flex flex-col-reverse gap-y-2 text-center">
         <span
           class="text-[32px] leading-[38.4px]"
         >Добро пожаловать!</span>
@@ -18,8 +18,8 @@
         label="Почта"
         labelClass="text-[#D4E0FA]"
         inputClass="!placeholder-[#2550AF] !text-[#D4E0FA]"
-        formControlName="email"
-        placeholder="Введите почту"
+        formControlName="phoneNumber"
+        placeholder="Введите телефое"
         [prefix]="prefix"
         [errorMessages]="{
         required: 'Почта обязателен',
@@ -45,9 +45,8 @@
       </app-input>
     </div>
 
-
     <app-button
-      class="!w-full"
+      class="!w-full mt-5"
       variant="primary"
       size="lg"
       shape="pill"
@@ -57,19 +56,13 @@
       Далее
     </app-button>
   </form>
-
-  <div class="flex flex-col text-white">
-    <img priority ngSrc="./assets/svg/logo.svg" alt="logo" width="224.57" height="48">
-    <span class="text-2xl uppercase text-end">ADMIN</span>
-  </div>
 </div>
 
 <ng-template #prefix>
-  <app-svg-icon
-    [iconName]="'sms'"
-    className="h-6 w-12 px-3 text-[#D4E0FA]"
-  >
-  </app-svg-icon>
+  <lucide-icon
+    name="phoneCall"
+    class="text-[#D4E0FA] w-12"
+  />
 </ng-template>
 
 <ng-template #prefixPassword>
