--- a/src/app/views/companies/components/companies-list/companies-list.component.html
+++ b/src/app/views/companies/components/companies-list/companies-list.component.html
@@ -5,9 +5,8 @@
     <button
       class="px-4 py-2 text-sm font-medium text-white bg-green-600 rounded-md hover:bg-green-700 focus:outline-none"
       [routerLink]="['/companies/add']"
-      [queryParams]="{ type }"
     >
-      Добавить <span class="lowercase">{{ title }}а</span>
+      Добавить компанию
     </button>
   </div>
 
