--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@
   //--mat-expansion-container-shape: 4px;
   //--mdc-elevated-card-container-shape: 4px;
 
+  --primary: #1D76C2;
+  --secondary: #4CA85B;
+  --highlight: #060563;
+
   --mdc-outlined-text-field-outline-color: #608DF0; /* var(--mat-sys-secondary-container); */
 
   --mat-table-row-item-label-text-tracking: 0px;
