refactor: change styles

--- a/src/app/core/components/header-nav/header-nav.component.html
+++ b/src/app/core/components/header-nav/header-nav.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-x-[30px] items-center h-full text-white">
+<div class="flex gap-x-[30px] items-center h-full text-gray-900">
   <div class="flex flex-col">
     <div class="h-[24px] font-[600] leading-6">
       {{ userDetail?.email }}
@@ -8,6 +8,6 @@
   <app-svg-icon
     [routerLink]="['/logout']"
     iconName="logout-1"
-    className="h-6 w-6 text-[#FFFFFF] hover:text-[#D4E0FA] cursor-pointer transition-colors">
+    className="h-6 w-6 text-gray-900 hover:text-gray-600 cursor-pointer transition-colors">
   </app-svg-icon>
 </div>
