--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -34,7 +34,7 @@
         <span>№</span>
       </th>
       <td
-        class="!border-[#EFF4F9]"
+        class="!border-slate-100"
         mat-cell
         *matCellDef="let row"
       >
@@ -58,7 +58,7 @@
         </mat-checkbox>
       </th>
       <td
-        class="!border-[#EFF4F9]"
+        class="!border-slate-100"
         mat-cell *matCellDef="let row"
       >
         <mat-checkbox
@@ -85,7 +85,7 @@
         </mat-checkbox>
       </th>
       <td
-        class="!border-[#EFF4F9]"
+        class="!border-slate-100"
         mat-cell *matCellDef="let row"
       >
         <mat-checkbox
@@ -117,7 +117,7 @@
 
         <td
           mat-cell
-          class="!border-[#EFF4F9]"
+          class="!border-slate-100"
           *matCellDef="let row"
           [ngClass]="{ 'border-none': row == expandedRow }"
         >
@@ -172,7 +172,7 @@
         *matHeaderCellDef
       >&nbsp;</th>
       <td
-        class="!border-[#EFF4F9]"
+        class="!border-slate-100"
         mat-cell *matCellDef="let row"
       >
         <button
@@ -205,7 +205,7 @@
     </ng-container>
 
     <tr
-      class="!bg-[#EFF4F9] !text-[#8B97A2] !rounded-t-xl"
+      class="!bg-slate-100 !text-[#8B97A2] !rounded-t-xl"
       mat-header-row
       *matHeaderRowDef="displayedColumns"
     ></tr>
