--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,9 @@
   --mat-bottom-sheet-container-shape: 14px;
   --mat-bottom-sheet-container-background-color: var(--mat-sys-on-primary);
 
+  --mat-table-header-container-height: 40px;
+  --mat-table-row-item-container-height: 40px;
+
   --mdc-dialog-container-color: #ffffff;
 
   --app-font-family: 'SF Pro Display', sans-serif;
