--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="relative h-[64px] flex w-full justify-between">
+<div class="relative h-[64px] flex w-full justify-between px-2.5">
   <div class="h-full flex items-center justify-center gap-x-5">
     <img priority ngSrc="./assets/icons/logo.png" alt="logo" width="50" height="50">
-    <div class="text-2xl text-gray-100 font-bold font-montserrat">Pinocchio</div>
+    <div class="text-2xl text-gray-900 font-bold font-montserrat">Pinocchio</div>
   </div>
 
   <app-header-nav></app-header-nav>
