--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,3 +1,3 @@
-<div class="h-screen overflow-hidden element">
+<div class="h-screen overflow-hidden bg-white">
   <router-outlet></router-outlet>
 </div>
