--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -1,11 +1,11 @@
-<div class="min-h-screen element flex flex-col p-4">
-  <app-header></app-header>
+<div class="min-h-screen bg-white flex flex-col p-4">
+  <app-header class="shadow-md border border-gray-100"></app-header>
   <div class="relative flex flex-1 gap-4 mt-4">
     <app-menu
-      class="sticky"
+      class="sticky shadow-2xl border border-gray-100"
     ></app-menu>
 
-    <main class="flex-1 rounded-[10px] min-w-0 bg-white p-6">
+    <main class="flex-1 min-w-0 bg-white border border-gray-100 p-6 shadow-2xl">
       <router-outlet></router-outlet>
     </main>
   </div>
