--- a/src/app/views/users/components/user-details/user-details.component.html
+++ b/src/app/views/users/components/user-details/user-details.component.html
@@ -15,31 +15,25 @@
 
   <!-- User Info -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-    <!-- Column 1 -->
-    <div class="space-y-4">
-      <div>
-        <p class="text-sm font-medium text-gray-500">ФИО</p>
-        <p class="text-gray-800">{{user.full_name}}</p>
-      </div>
 
-      <div>
-        <p class="text-sm font-medium text-gray-500">Телефон</p>
-        <p class="text-gray-800">{{user.phone | phoneFormat}}</p>
-      </div>
+    <div>
+      <p class="text-sm font-medium text-gray-500">Имя</p>
+      <p class="text-gray-800">{{user.firstName}}</p>
     </div>
 
-    <!-- Column 2 -->
-    <div class="space-y-4">
+    <div>
+      <p class="text-sm font-medium text-gray-500">Фамилия</p>
+      <p class="text-gray-800">{{user.lastName}}</p>
+    </div>
 
-      <div>
-        <p class="text-sm font-medium text-gray-500">Дата создания</p>
-        <p class="text-gray-800">{{user.created_at | date:'dd.MM.yyyy HH:mm'}}</p>
-      </div>
+    <div>
+      <p class="text-sm font-medium text-gray-500">Телефон</p>
+      <p class="text-gray-800">{{user.phoneNumber | phoneFormat}}</p>
+    </div>
 
-      <div>
-        <p class="text-sm font-medium text-gray-500">Дата обновления</p>
-        <p class="text-gray-800">{{user.updated_at | date:'dd.MM.yyyy HH:mm'}}</p>
-      </div>
+    <div>
+      <p class="text-sm font-medium text-gray-500">Почта</p>
+      <p class="text-gray-800">{{user.email}}</p>
     </div>
   </div>
 
@@ -81,10 +75,10 @@
     class="w-full h-full cursor-pointer flex items-center justify-center"
     (click)="$event.stopPropagation()" [matMenuTriggerFor]="actionsPayments"
   >
-    <app-svg-icon
-      [iconName]="'more'"
-      className="h-6 w-6 text-[#38AA3D] group-hover:text-green-500 cursor-pointer transition-colors"
-    ></app-svg-icon>
+    <lucide-icon
+      class="h-6 w-6 text-green-500 group-hover:text-green-600 cursor-pointer transition-colors"
+      name="ellipsis"
+    ></lucide-icon>
   </div>
   <mat-menu #actionsPayments="matMenu" xPosition="before" class="menu-actions">
     <button
