update some issues

--- a/src/app/shared/components/modal/attach-user-modal/attach-user-modal.component.html
+++ b/src/app/shared/components/modal/attach-user-modal/attach-user-modal.component.html
@@ -18,12 +18,12 @@
     <div class="flex flex-col gap-y-5">
       <div class="text-lg font-medium">
         <span class="text-gray-500">Имя: </span>
-        <span>{{ user.full_name }}</span>
+        <span>{{ user.firstName }}</span>
       </div>
 
       <div class="text-lg font-medium">
         <span class="text-gray-500">Телефон: </span>
-        <span>{{ user.phone }}</span>
+        <span>{{ user.phoneNumber }}</span>
       </div>
       <!-- Organization -->
       <mat-form-field appearance="outline" class="w-full">
