feat: add tariff CRUD

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,8 @@
   --secondary: #4CA85B;
   --highlight: #060563;
 
+  --mdc-elevated-card-container-color: #ffffff;
+
   --mdc-outlined-text-field-outline-color: #608DF0; /* var(--mat-sys-secondary-container); */
 
   --mat-table-row-item-label-text-tracking: 0px;
