--- a/src/app/views/tariff/pages/tariff-list/tariff-list.component.html
+++ b/src/app/views/tariff/pages/tariff-list/tariff-list.component.html
@@ -83,6 +83,7 @@
     >
       <div
         class="w-full flex gap-x-2 items-center cursor-pointer"
+        (click)="deleteTariff(row)"
       >
         <lucide-icon
           [className]="'text-red-500'"
