--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,8 @@
   --highlight: #060563;
 
   --mdc-elevated-card-container-color: #ffffff;
+  --mat-select-panel-background-color: #ffffff;
+  --mat-menu-container-color: #ffffff;
 
   --mdc-outlined-text-field-outline-color: #608DF0; /* var(--mat-sys-secondary-container); */
 
