--- a/src/app/views/users/pages/users-create/users-create.component.html
+++ b/src/app/views/users/pages/users-create/users-create.component.html
@@ -73,7 +73,6 @@
           matInput
           formControlName="email"
           required
-          appDigitMask
           placeholder="Введите плчту (some@gmail.com)"
         >
         <mat-error *ngIf="f['email'].hasError('required')">
@@ -104,7 +103,7 @@
           Обязательное поле
         </mat-error>
         <mat-error *ngIf="f['password'].hasError('minlength')">
-          Минимум 8 символов
+          Минимум 6 символов
         </mat-error>
       </mat-form-field>
     </div>
@@ -123,6 +122,7 @@
         type="submit"
         [disabled]="userForm.invalid"
         class="px-4 py-2 text-sm font-medium text-white bg-green-600 rounded-md hover:bg-green-700 focus:outline-none"
+        [ngClass]="{'opacity-50': userForm.invalid}"
       >
         Создать пользователя
       </button>
