--- a/src/app/views/users/pages/users-create/users-create.component.html
+++ b/src/app/views/users/pages/users-create/users-create.component.html
@@ -44,6 +44,22 @@
           Максимум 100 символов
         </mat-error>
       </mat-form-field>
+
+      <mat-form-field appearance="outline" class="w-full">
+        <mat-label>Роль</mat-label>
+
+        <mat-select formControlName="role">
+          @for(role of roleTypes; track $index) {
+            <mat-option [value]="role">{{ role }}</mat-option>
+          }
+        </mat-select>
+
+        <lucide-icon
+          class="mr-2 text-green-500"
+          matSuffix
+          name="chevron-down"
+        ></lucide-icon>
+      </mat-form-field>
     </div>
 
 
