feat: add company tariff

--- a/src/app/views/company-tariff/pages/company-tariff-list/company-tariff-list.component.html
+++ b/src/app/views/company-tariff/pages/company-tariff-list/company-tariff-list.component.html
@@ -12,7 +12,7 @@
 
   <app-table
     [numbering]="true"
-    [columns]="tariffColumn"
+    [columns]="companyTariffColumn"
     [data]="tariffs"
     [actionTemplate]="actionTemplate"
     [additionalTemplate]="additionalTemplate"
