feat: lucide panel close open icons

--- a/src/app/core/components/header-nav/header-nav.component.html
+++ b/src/app/core/components/header-nav/header-nav.component.html
@@ -5,9 +5,9 @@
     </div>
   </div>
 
-  <app-svg-icon
+  <lucide-icon
     [routerLink]="['/logout']"
-    iconName="logout-1"
-    className="h-6 w-6 text-gray-900 hover:text-gray-600 cursor-pointer transition-colors">
-  </app-svg-icon>
+    [className]="'h-6 w-6 text-gray-800 hover:text-gray-500 cursor-pointer transition-colors'"
+    name="log-out"
+  ></lucide-icon>
 </div>
