feat: add detach user

--- a/src/app/views/companies/components/companies-users/companies-users.component.html
+++ b/src/app/views/companies/components/companies-users/companies-users.component.html
@@ -13,7 +13,7 @@
 
   <app-table
     [numbering]="true"
-    [columns]="usersColumns"
+    [columns]="companyUserColumn"
     [data]="users"
     [actionTemplate]="actionTemplate"
   ></app-table>
