--- a/src/app/shared/components/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu-item/menu-item.component.html
@@ -5,7 +5,7 @@
 >
   <div
     class="w-full py-1 flex items-center rounded-[5px] group-hover:bg-primary"
-    [ngClass]="{ 'bg-highlight': isActive }"
+    [ngClass]="{ 'bg-primary': isActive }"
   >
     <div
       class="w-[64px] flex justify-center items-center"
