feat: add client add

--- a/src/app/views/client/pages/client-list/client-list.component.html
+++ b/src/app/views/client/pages/client-list/client-list.component.html
@@ -4,7 +4,7 @@
 
     <button
       class="px-4 py-2 text-sm font-medium text-white bg-green-500 rounded-md hover:bg-green-600 focus:outline-none"
-      [routerLink]="['/tariff/add']"
+      [routerLink]="['add']"
     >
       Добавить клиента
     </button>
@@ -12,7 +12,7 @@
 
   <app-table
     [numbering]="true"
-    [columns]="clientColumn"
+    [columns]="companyUserColumn"
     [data]="clients"
     [actionTemplate]="actionTemplate"
     [additionalTemplate]="additionalTemplate"
